JumpScript/tests/baselines/reference/missingRequiredDeclare.d.errors.txt
tests/cases/compiler/missingRequiredDeclare.d.jump(1,1): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.jump file.
tests/cases/compiler/missingRequiredDeclare.d.jump(1,7): error TS1039: Initializers are not allowed in ambient contexts.


==== tests/cases/compiler/missingRequiredDeclare.d.jump (2 errors) ====
    var x = 1;
    ~~~
!!! error TS1046: A 'declare' modifier is required for a top level declaration in a .d.jump file.
          ~
!!! error TS1039: Initializers are not allowed in ambient contexts.